[2단계 - 출석 다시 구현하기] 프리(김현욱) 미션 제출합니다. (#124)
* chore: 1단계 코드 삭제

* docs: 초기 기능 명세서 작성

* test: FileLineReader의 파일 전체 라인을 읽는 테스트 작성

* feat: 파일 전체 라인을 읽는 FileLineReader의 기능 구현

* test: 닉네임을 가지고 Crew 객체를 생성하는 테스트 작성

* feat: 닉네임을 가지고 Crew 객체를 생성하는 기능 구현

* test: 출석한 일자 및 시간을 가지고 출석객체를 생성하는 테스트 작성

* feat: 출석한 일자 및 시간을 가지고 출석객체를 생성하는 기능 구현

* test: 출석시간 객체의 예외 테스트 작성

* feat: 주말, 캠퍼스 운영시간, 미래의 시간을 검증하는 출석시간 기능 구현

* test: 공휴일인지 확인하는 테스트 작성

* feat: 공휴일인지 확인하는 기능 구현

* feat: 공휴일을 검증하는 출석시간 기능 구현

* refactor: AttendanceDateTime 클래스의 패키지를 프로덕션 패키지로 이동

* test: 출석시간을 가지고 출석상태를 검사하는 테스트 작성

* test: 두 날짜 사이의 차이를 분으로 환산하여 알려주는 테스트 작성

* feat: 두 날짜 사이의 차이를 분으로 환산하여 알려주는 기능 구현

* test: 주어진 출석날짜의 요일을 알려주는 테스트 작성

* test: 주어진 출석날짜의 요일을 알려주는 기능 구현

* refactor: 두 날짜 사이의 차이를 계산할 때, 매개변수로 LocalTime을 받도록 수정

* test: 출석 시간을 통해 출석 상태를 알려주는 테스트 케이스에 월요일 케이스 추가

* feat: 출석 시간을 통해 출석 상태를 알려주는 기능 구현

* test: 출석상태 enum을 통해 문자열을 생성하는 테스트 작성

* feat: 출석상태 enum을 통해 문자열을 생성하는 기능 구현

* feat: 출석 확인을 담당하는 view 구현

* fix: 등교 시간을 입력받을 때, 시간이 파싱되지 않던 점 수정

* test: 크루들의 이전 출석 기록을 가지고 출석부를 생성하는 테스트 작성

* feat: 출석부 객체 생성

* test: 파일로부터 읽어온 이전 출석 기록들을 Map으로 파싱하는 테스트 작성

* feat: 파일로부터 읽어온 이전 출석 기록들을 Map으로 파싱하는 기능 구현

* fix: 출석부 객체 생성 시 필요한 Map의 key가 닉네임 문자열이 아니라 Crew 객체가 되도록 수정

* test: 크루의 등록 여부, 오늘 출석 여부를 검증하는 테스트 작성

* feat: 크루의 등록 여부, 오늘 출석 여부를 검증하는 기능 구현

* test: 크루의 출석을 등록하는 테스트 작성

* feat: 크루의 출석을 등록하는 기능 구현

* test: 크루와 일(day)으로 현재 월 해당 일의 출석시간을 반환하는 테스트 작성

* test: 출석시간이 주어진 일자(day)인지 알려주는 테스트 작성

* feat: 출석시간이 주어진 일자(day)인지 알려주는 기능 구현

* feat: 크루와 일(day)으로 현재 월 해당 일의 출석시간을 반환하는 테스트 작성

* test: 출석된 시간을 변경하는 테스트 작성

* feat: 출석된 시간을 변경하여 반환하는 기능 구현

* feat: 크루의 특정 출석시간을 삭제하는 기능 구현

* feat: 출석부 초기화 및 출석 확인 기능을 가진 컨트롤러 구현

* test: 숫자가 적힌 문자열을 숫자형으로 파싱하는 테스트 작성

* test: 숫자가 적힌 문자열을 숫자형으로 파싱하는 기능 구현

* docs: 출석 파일의 출석 날짜를 현재 월으로 수정

* feat: 컨트롤러와 뷰에 출석을 수정하는 기능 구현

* feat: 결석을 담당하는 출석시간 객체 생성 기능 구현

* feat: 특정 크루의 금월 출석 기록을 출력하는 컨트롤러 기능 구현

* test: 출석 시간들을 알려주면 출석 상태들을 알려주는 테스트 작성

* feat: 출석 시간들을 알려주면 출