@@ -1,20 +1,16 @@
 package attendance.view;
 
 import java.io.IOException;
-import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.List;
-import java.util.stream.Stream;
 
 public class FileLineReader {
-
-    public List<String> readAllLines(final String filePath, final String fileName) {
-        try (Stream<String> fileLines = Files.lines(Paths.get(filePath + fileName), StandardCharsets.UTF_8)) {
-            return fileLines.toList();
-        } catch (IOException e) {
-            throw new IllegalArgumentException("올바른 경로를 입력해주세요.", e);
+    public static List<String> readAllLines(final String path, final String fileName) {
+        try {
+            return Files.readAllLines(Path.of(path + fileName));
+        } catch (IOException exception) {
+            throw new IllegalArgumentException("올바른 파일 경로를 입력해 주세요.");
         }
     }
-
 }
